# sim3D

./: .gitignore  404.html  README.md  challenges.txt  debug.md  example.py  generate-gif.txt  index.html  main.ipynb  main.py  main_marimo.py  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
.github/workflows/: publish.yaml
_sim2D/: __init__.py  boundary_conditions.py  constants.py  factories.py  flow_evolution.py  grids.py  models.py  properties.py  simulation.py  visualization.py  wells.py
api-reference/: index.html
api-reference/correlations-array/: index.html
api-reference/correlations-scalar/: index.html
api-reference/full-api/: index.html
benchmarks/: spe1.py
best-practices/: index.html
best-practices/errors/: index.html
best-practices/grid-design/: index.html
best-practices/performance/: index.html
best-practices/solver-selection/: index.html
best-practices/timestep-selection/: index.html
best-practices/validation/: index.html
docs/: index.md
docs/api-reference/: correlations-array.md  correlations-scalar.md  full-api.md
docs/best-practices/: errors.md  grid-design.md  performance.md  solver-selection.md  timestep-selection.md  validation.md
docs/fundamentals/: grid-systems.md  simulation-workflow.md
docs/getting-started/: concepts.md  quickstart.md
docs/reference/: glossary.md  units.md
docs/tutorials/: 01-first-simulation.md  02-building-models.md  03-waterflood.md  04-gas-injection.md  05-miscible-flooding.md
docs/user-guide/: capillary-pressure.md  config.md  constants.md  fluid-properties.md  grids.md  index.md  relative-permeability.md  rock-properties.md
docs/user-guide/advanced/: aquifers.md  boundary-conditions.md  miscibility.md  model-analysis.md  pvt-tables.md  serialization.md  states-streams.md
docs/user-guide/simulation/: preconditioners.md  schemes.md  solvers.md  timestep-control.md
docs/user-guide/wells/: basics.md  controls.md  fluids.md  patterns.md  schedules.md
docs/visualization/: 1d-plots.md  2d-maps.md  3d-rendering.md  index.md  pyvista3d.md
examples/: index.html
fundamentals/: index.html
fundamentals/black-oil-model/: index.html
fundamentals/grid-systems/: index.html
fundamentals/reservoir-simulation/: index.html
fundamentals/simulation-workflow/: index.html
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/glossary/: index.html
reference/units/: index.html
scenarios/: analysis_ch4_injection.py  analysis_co2_injection.py  analysis_primary_depletion.py  analysis_stabilization.py  ch4_injection.py  ch4_injection_analysis.py  ch4_injection_coarse.py  co2_injection.py  co2_injection_analysis.py  co2_injection_coarse.py  comparative_analysis.py  docs.py  primary_depletion.py  primary_depletion_analysis.py  primary_depletion_coarse.py  primary_depletion_refined.py  setup.py  stabilization.py  stabilization_analysis.py  stabilization_coarse.py  stabilization_refined.py
search/: search_index.json
sim2D/: __init__.py  boundary_conditions.py  factories.py  flow_evolution.py  grids.py  models.py  properties.py  simulation.py  typing.py  visualization.py
sim3D/: __init__.py  _precision.py  boundaries.py  boundary_conditions.py  capillary_pressures.py  constants.py  dynamic.py  dynamics.py  factories.py  faults.py  flow.py  flow_evolution.py  fluid_contacts.py  grids.py  models.py  properties.py  pvt.py  relperm.py  simulation.py  states.py  static.py  statics.py  types.py  visualization.py  wells.py
sim3D/diffusivity/: __init__.py  pressure.py  saturation.py
sim3D/grids/: __init__.py  base.py  properties.py  saturation.py
sim3D/visualization/: __init__.py  base.py  plotly.py  plotly2d.py  plotly3d.py  pyvista.py
src/bores/: __init__.py  _precision.py  analyses.py  boundaries.py  boundary_conditions.py  capillary_pressures.py  cells.py  config.py  constants.py  errors.py  factories.py  faults.py  fractures.py  helpers.py  models.py  relperm.py  serialization.py  simulate.py  states.py  stores.py  streams.py  timing.py  types.py  utils.py
src/bores/correlations/: __init__.py  arrays.py  core.py
src/bores/diffusivity/: __init__.py  base.py
src/bores/grids/: base.py  boundary_conditions.py  pvt.py  rock_fluid.py  saturation.py  updates.py
src/bores/pvt/: __init__.py  arrays.py  core.py  tables.py
src/bores/solvers/: base.py
src/bores/states/: __init__.py  base.py  stores.py  streams.py
src/bores/tables/: __init__.py  pseudo_pressure.py  pvt.py  rock_fluid.py
src/bores/visualization/: __init__.py  base.py  config.py  plotly1d.py  plotly2d.py  plotly3d.py  pyvista3d.py  utils.py
src/bores/wells/: __init__.py  base.py  controls.py  core.py  schedules.py
src/sim3D/: __init__.py  _precision.py  boundaries.py  capillary_pressures.py  cells.py  constants.py  factories.py  helpers.py  models.py  pvt.py  relperm.py  simulation.py  states.py  types.py  utils.py  wells.py
src/sim3D/diffusivity/: __init__.py  base.py  linear_solvers.py  saturation.py
src/sim3D/grids/: __init__.py  base.py  pvt.py
src/sim3D/pvt/: arrays.py  core.py
src/sim3D/visualization/: __init__.py  base.py  plotly1d.py  plotly2d.py  plotly3d.py
src/sim3D/wells/: base.py  controls.py  core.py
tests/: test_visualization_base.py
tutorials/: index.html
tutorials/01-first-simulation/: index.html
tutorials/02-building-models/: index.html
tutorials/03-waterflood/: index.html
tutorials/04-gas-injection/: index.html
tutorials/05-miscible-flooding/: index.html
user-guide/: index.html
user-guide/capillary-pressure/: index.html
user-guide/config/: index.html
user-guide/constants/: index.html
user-guide/fluid-properties/: index.html
user-guide/grids/: index.html
user-guide/relative-permeability/: index.html
user-guide/rock-properties/: index.html
user-guide/wells/basics/: index.html
visualization/: index.html
visualization/1d-plots/: index.html
visualization/2d-maps/: index.html
visualization/3d-rendering/: index.html
visualization/pyvista3d/: index.html
(+37 files in other folders)
