[project]
name = "sim3D"
version = "0.1.0"
description = "3D black-oil reservoir modelling and simulation library - 3D Cartesian grid | Linear flow."
authors = [
    { name = "ti-oluwa", email = "tioluwa.dev@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "coolprop>=6.8.0",
    "imageio>=2.37.0",
    "ipython>=8.37.0",
    "kaleido>=1.0.0",
    "numba>=0.61.2",
    "numpy>=2.0.0",
    "plotly>=6.2.0",
    "pyamg>=5.3.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "thermo>=0.4.2",
    "trame>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "marimo>=0.14.16",
    "mypy>=1.16.1",
    "rich>=14.0.0",
    "ruff>=0.12.1",
    "watchdog>=6.0.0",
]

[tool.marimo.runtime]
output_max_bytes = 10_000_000_000
